--- a/원예.html
+++ b/원예.html
@@ -3,91 +3,91 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>프로그램 | 가시림</title>
-  <meta name="description" content="가시림 — 제주 민간정원, 원예·명상·예술 프로그램이 있는 치유의 정원.">
+  <title>원예 프로그램 | 가시림</title>
+  <meta name="description" content="가시림 원예 프로그램 — 감각원예와 테라리움 메이킹으로 식물과 가까워지는 힐링 워크숍." />
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
-  <!-- Preload the big header background (faster perceived load) -->
-  <link rel="preload" as="image" href="assets/img/main.jpg">
+  <link rel="preload" as="image" href="assets/img/가든센터.jpg">
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Zen+Old+Mincho&family=Nanum+Myeongjo&display=swap"/>
 
-  <!-- CSS -->
   <link rel="stylesheet" href="assets/css/styleguide.css"/>
   <link rel="stylesheet" href="assets/css/globals.css"/>
   <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body>
   <div class="page">
-    
-    <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
 
-    <!-- 가시림 소개 -->
-    <section class="body-container" aria-labelledby="intro-heading">
-      <h2 id="intro-heading" class="sr-only">가시림 소개</h2>
-
-      <div class="article article-container reveal from-up">
-        <h3 class="h center">수목원을 넘어 복합 문화 공간을 지향하다.</h3>
-        <p class="p center">가시림은 제주 토박이 조경가가 30년 이상의 경력으로 직접 설계·조성한 4,000평 규모의 민간 수목원이며, 원예·명상·예술 등 다양한 문화 프로그램을 운영하는 복합 문화 공간이다.</p>
-      </div>
-
-      <div class="intro-hero reveal parallax from-up"></div>
-
-
-      <div class="article article-container reveal from-left">
-        <h3 class="h left">제주 4호 민간정원</h3>
-        <p class="p left">가시림 수목원은 정부에 등록된 제주 4호 민간정원으로 2023년 12월에 오픈했으며 <b>14개의 정원·숲·길</b>로 구성되어 있다. <b>200년 이상 된 수목</b>이 다수 존재하며, 단순한 포토스팟 조형물이 아닌 진정성 있는 식물 배치 철학을 바탕으로 운영된다. 대표가 매일 아침 직접 나와 세심하게 관리함으로써 사계절 각기 다른 경관을 제공하며, 한 곳에서 다양한 <b>희귀 식물</b>을 감상할 수 있는 독보적인 수목원으로 자리매김하고 있다.</p>
-      </div>
-
-      <section class="intro-gallery reveal from-up" aria-label="가시림 이미지 갤러리" data-gallery>
-        <button class="intro-gallery-nav intro-gallery-nav--prev embla__prev" type="button" aria-label="이전 사진" data-gallery-prev>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor" aria-hidden="true" focusable="false">
-            <path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z" />
-          </svg>
-        </button>
-        <div class="intro-gallery-viewport">
-          <div class="intro-gallery-track">
-            <div class="gimg gimg-a" role="img" aria-label="갤러리 이미지 A"></div>
-            <div class="gimg gimg-b" role="img" aria-label="갤러리 이미지 B"></div>
-            <div class="gimg gimg-c" role="img" aria-label="갤러리 이미지 C"></div>
-            <div class="gimg gimg-d" role="img" aria-label="갤러리 이미지 D"></div>
+    <main class="program-main" aria-labelledby="gardening-program-heading">
+      <section class="program-hero">
+        <div class="program-hero__grid">
+          <div class="program-hero__copy">
+            <p class="program-hero__eyebrow">Gardening</p>
+            <h1 class="program-hero__title" id="gardening-program-heading">식물과 가까워지는 원예 워크숍</h1>
+            <p class="program-hero__lead">가시림의 원예 프로그램은 손끝으로 식물을 돌보며 감각을 열어가는 힐링 시간을 제공합니다. 실내외 식물 관리부터 테라리움 디자인까지 차근차근 배워보세요.</p>
+            <p class="program-hero__description">프로 식물 디렉터가 계절별 소재를 엄선하고, 식물 케어와 공간 연출 팁을 안내합니다. 완성한 작품은 집으로 가져가 일상 속 작은 숲을 이어갈 수 있습니다.</p>
           </div>
+          <figure class="program-hero__media">
+            <img src="assets/img/가든센터.jpg" alt="식물을 손질하는 모습" loading="lazy">
+          </figure>
         </div>
-        <button class="intro-gallery-nav intro-gallery-nav--next embla__next" type="button" aria-label="다음 사진" data-gallery-next>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor" aria-hidden="true" focusable="false">
-            <path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z" />
-          </svg>
-        </button>
       </section>
 
-      <div class="article article-container reveal from-right">
-        <h3 class="h right">수목원은 어떻게 감상해야 하는가</h3>
-        <p class="p right">가시림은 단순한 수목 감상을 넘어, 자연 속에서 오감을 열고 자신을 바라보는 경험을 제공하는 공간이다. 자기 성찰과 휴식을 통해 이루어지는 치유를 지향하며, 수목원인 동시에 복합문화공간이기도 하다. <b>궁극적으로 가시림이 구현하고자 하는 것은 “치유의 정원”이다.</b></p>
+      <section class="program-catalog" aria-label="가시림 원예 프로그램 목록">
+        <div class="program-grid">
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="horticulture-lab">
+            <figure class="program-card__media">
+              <img src="assets/img/가든센터.jpg" alt="가드닝 워크숍" loading="lazy">
+            </figure>
+            <div class="program-card__body">
+              <div class="program-card__meta">
+                <p class="program-card__category">감각원예 워크숍</p>
+                <p class="program-card__subtitle">매주 수요일 14:00 — 계절 식물 케어</p>
+              </div>
+              <p class="program-card__description">계절마다 다른 소재로 식물을 분갈이하고 손질하는 가드닝 스튜디오입니다. 식물 생리와 흙 배합, 물주기 루틴까지 꼼꼼하게 익힐 수 있습니다.</p>
+              <div class="program-card__footer">
+                <p class="program-card__duration">90분 프로그램</p>
+                <p class="program-card__price">38,000원</p>
+              </div>
+            </div>
+          </article>
+
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="terrarium-clinic">
+            <figure class="program-card__media">
+              <img src="assets/img/가든센터.jpg" alt="테라리움을 만드는 참가자" loading="lazy">
+            </figure>
+            <div class="program-card__body">
+              <div class="program-card__meta">
+                <p class="program-card__category">테라리움 메이킹</p>
+                <p class="program-card__subtitle">매월 첫째 주 일요일 11:00 — 미니 정원 디자인</p>
+              </div>
+              <p class="program-card__description">자갈과 이끼, 미니어처 식물을 조합해 나만의 테라리움을 완성합니다. 실내에서 오래 건강하게 키우는 방법까지 함께 안내합니다.</p>
+              <div class="program-card__footer">
+                <p class="program-card__duration">110분 프로그램</p>
+                <p class="program-card__price">45,000원</p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+    </main>
+
+    <div class="program-modal" data-program-modal hidden>
+      <div class="program-modal__backdrop" data-program-modal-close></div>
+      <div class="program-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="program-modal-title" tabindex="-1">
+        <button type="button" class="program-modal__close" aria-label="닫기" data-program-modal-close>
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="program-modal__content" data-program-modal-content></div>
       </div>
+    </div>
 
-      <div class="intro-img-wide reveal from-left"></div>
-      <div class="intro-img-tall reveal from-right"></div>
-      <div class="intro-img-long reveal from-up"></div>
-
-      <div class="article article-container reveal from-up">
-        <h3 class="h left">자연을 다각도에서 체험하다</h3>
-        <p class="p left">가시림은 <b>원예, 명상, 예술</b> 프로그램을 통해 <b>자연을 다각도로 체험</b>할 수 있도록 한다. 이를 통해 자신의 감각과 자연에 집중하고 마음을 편안히 가라앉히며 치유의 시간을 갖게 된다.</p>
-      </div>
-
-      <div class="intro-mosaic-right reveal from-right"></div>
-      <div class="intro-mosaic-left-top reveal from-left"></div>
-      <div class="intro-mosaic-left-bottom reveal from-left"></div>
-    </section>
-
-    <!-- Footer (loaded from /partials/footer.html) -->
     <div id="site-footer" data-include="partials/footer.html"></div>
   </div>
 
-  <!-- JS -->
   <script src="assets/js/includes.js" defer></script>
   <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
   <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
