--- a/프로그램.html
+++ b/프로그램.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Programs | 가시림</title>
-  <meta name="description" content="가시림 명상 프로그램 — 숲과 원예, 감각을 깨우는 명상 수업 안내." />
+  <meta name="description" content="가시림 명상·원예 프로그램 전체 보기 — 산책 명상부터 온실 힐링, 가드닝 클래스까지 한눈에 확인하세요." />
   <link rel="icon" href="assets/img/favicon.svg" type="image/svg+xml">
 
   <!-- Preload the big header background (faster perceived load) -->
@@ -30,9 +30,9 @@
         <div class="program-hero__grid">
           <div class="program-hero__copy">
             <p class="program-hero__eyebrow">Programs</p>
-            <h1 class="program-hero__title" id="program-heading">가시림 명상 프로그램</h1>
-            <p class="program-hero__lead">숲의 호흡을 닮은 루틴과 명상, 가드닝이 어우러진 가시림의 시그니처 프로그램을 소개합니다. 호흡을 따라 걷고, 계절의 향을 음미하며 자신과 마주하는 시간을 준비했습니다.</p>
-            <p class="program-hero__description">Interpret different emerging, even when venian anim aute carefully. Evocative Garden awesomely restorative practices mindful and intrinsic. Compose, slow intentional forest-bath rituals. Punctual alongside, essential inquiry eleven tempor ensured true.</p>
+            <h1 class="program-hero__title" id="program-heading">가시림 프로그램 전체보기</h1>
+            <p class="program-hero__lead">숲과 호흡, 식물과 손끝이 맞닿는 순간까지 가시림에서 경험할 수 있는 모든 프로그램을 한자리에 모았습니다. 원하는 결을 따라 깊이 있는 시간을 만나보세요.</p>
+            <p class="program-hero__description">새벽 산책 명상과 온실 집중 명상, 식물과 함께하는 치유 가드닝 등 프로그램별로 전문 퍼실리테이터가 함께합니다. 일정과 정원을 확인하고 바로 신청해 보세요.</p>
           </div>
           <figure class="program-hero__media">
             <img src="assets/img/main.jpg" alt="나무 사이로 들어오는 햇살이 비추는 숲길" loading="lazy">
@@ -42,19 +42,19 @@
 
       <section class="program-catalog" aria-label="가시림 명상 프로그램 목록">
         <div class="program-grid">
-          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="regular-class">
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="sunrise-walk">
             <figure class="program-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="정규 명상 수업 장면" loading="lazy">
+              <img src="assets/img/main.jpg" alt="아침 햇살이 내려앉은 숲길" loading="lazy">
             </figure>
             <div class="program-card__body">
               <div class="program-card__meta">
-                <p class="program-card__category">정규 명상 수업</p>
-                <p class="program-card__subtitle">매주 화·목 08:30 — 숲길 호흡과 온실 명상</p>
+                <p class="program-card__category">산책 명상 · 새벽 호흡 루틴</p>
+                <p class="program-card__subtitle">매주 화·목 07:30 — 숲길 호흡과 해맞이 워크</p>
               </div>
-              <p class="program-card__description">여명의 빛이 드는 산책길을 따라 몸을 깨우고, 온실에서의 집중 호흡으로 하루를 단단하게 여는 정규 세션입니다. 초심자도 안전하게 따라올 수 있도록 호흡의 리듬과 마음챙김을 세심하게 안내합니다.</p>
+              <p class="program-card__description">새벽의 맑은 공기 속에서 호흡을 열고, 숲 해설가와 함께 리듬을 맞추며 걷는 산책 명상 세션입니다. 일상으로 돌아가기 전 마음을 단단히 세우고 싶은 분께 추천합니다.</p>
               <div class="program-card__footer">
-                <p class="program-card__duration">90분 프로그램</p>
-                <p class="program-card__price">25,000원</p>
+                <p class="program-card__duration">75분 프로그램</p>
+                <p class="program-card__price">28,000원</p>
               </div>
             </div>
           </article>
@@ -65,13 +65,81 @@
             </figure>
             <div class="program-card__body">
               <div class="program-card__meta">
-                <p class="program-card__category">숲 명상: 오감으로 느끼는 메타세쿼이아 숲</p>
+                <p class="program-card__category">산책 명상 · 오감 몰입 숲 여정</p>
                 <p class="program-card__subtitle">계절별 주말 10:00 — 숲 해설과 함께하는 깊은 몰입</p>
               </div>
-              <p class="program-card__description">울창한 메타세쿼이아 숲에서 계절별 향과 색을 느끼며 감각을 열고, 자연의 소리를 오롯이 듣는 시간을 마련했습니다. 안내자의 세심한 해설과 함께 숲의 숨결에 집중하는 깊은 명상 여정을 경험해보세요.</p>
+              <p class="program-card__description">울창한 메타세쿼이아 숲에서 계절별 향과 소리를 느끼며 감각을 열고, 자연의 숨결에 집중하는 주말 집중 명상 여정입니다.</p>
               <div class="program-card__footer">
                 <p class="program-card__duration">120분 프로그램</p>
                 <p class="program-card__price">25,000원</p>
+              </div>
+            </div>
+          </article>
+
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="regular-class">
+            <figure class="program-card__media">
+              <img src="assets/img/유리온실2.jpg" alt="정규 명상 수업 장면" loading="lazy">
+            </figure>
+            <div class="program-card__body">
+              <div class="program-card__meta">
+                <p class="program-card__category">온실 명상 · 주중 루틴</p>
+                <p class="program-card__subtitle">매주 화·목 08:30 — 숲길 호흡과 온실 명상</p>
+              </div>
+              <p class="program-card__description">보행 명상과 온실 집중 호흡으로 하루를 단단히 여는 정규 세션입니다. 초심자도 무리 없이 몰입할 수 있도록 세심하게 안내합니다.</p>
+              <div class="program-card__footer">
+                <p class="program-card__duration">90분 프로그램</p>
+                <p class="program-card__price">25,000원</p>
+              </div>
+            </div>
+          </article>
+
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="deep-rest">
+            <figure class="program-card__media">
+              <img src="assets/img/카페.jpg" alt="촛불과 쿠션이 놓인 명상 공간" loading="lazy">
+            </figure>
+            <div class="program-card__body">
+              <div class="program-card__meta">
+                <p class="program-card__category">명상 · 디지털 디톡스</p>
+                <p class="program-card__subtitle">매주 토요일 18:30 — 촛불 명상과 사운드 배스</p>
+              </div>
+              <p class="program-card__description">해질녘 촛불 아래 사운드 배스로 하루의 긴장을 풀어내는 야간 명상 프로그램입니다. 감각을 정돈하고 깊은 휴식 상태로 진입하도록 돕습니다.</p>
+              <div class="program-card__footer">
+                <p class="program-card__duration">100분 프로그램</p>
+                <p class="program-card__price">32,000원</p>
+              </div>
+            </div>
+          </article>
+
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="horticulture-lab">
+            <figure class="program-card__media">
+              <img src="assets/img/가든센터.jpg" alt="온실에서 식물을 돌보는 참가자" loading="lazy">
+            </figure>
+            <div class="program-card__body">
+              <div class="program-card__meta">
+                <p class="program-card__category">원예 · 가드닝 스튜디오</p>
+                <p class="program-card__subtitle">매주 수요일 14:00 — 감각원예 &amp; 식물 관리</p>
+              </div>
+              <p class="program-card__description">식물 전문가와 함께 계절 식물을 가꾸며 손끝으로 치유를 경험하는 가드닝 워크숍입니다. 실내외 식물 케어 노하우를 배울 수 있습니다.</p>
+              <div class="program-card__footer">
+                <p class="program-card__duration">90분 프로그램</p>
+                <p class="program-card__price">38,000원</p>
+              </div>
+            </div>
+          </article>
+
+          <article class="program-card" role="button" tabindex="0" aria-haspopup="dialog" data-program-id="terrarium-clinic">
+            <figure class="program-card__media">
+              <img src="assets/img/가든센터.jpg" alt="테라리움을 제작하는 수강생" loading="lazy">
+            </figure>
+            <div class="program-card__body">
+              <div class="program-card__meta">
+                <p class="program-card__category">원예 · 테라리움 메이킹</p>
+                <p class="program-card__subtitle">매월 첫째 주 일요일 11:00 — 테라리움 디자인 워크숍</p>
+              </div>
+              <p class="program-card__description">자갈과 이끼, 미니어처 식물을 조합해 자신만의 테라리움을 완성하는 클래스입니다. 생활 공간에 맞는 식물 디자인과 케어 팁을 안내합니다.</p>
+              <div class="program-card__footer">
+                <p class="program-card__duration">110분 프로그램</p>
+                <p class="program-card__price">45,000원</p>
               </div>
             </div>
           </article>
